# unisinosRPG

./: CMakeLists.txt  README.md  main.cpp
data/scenes/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
include/: Course.h  Entity.h  Game.h  Item.h  Scene.h  Student.h
src/: Course.cpp  Entity.cpp  Game.cpp  Item.cpp  Scene.cpp  Student.cpp
